force-app/main/default/objects/QuickBooks_Config__mdt/fields/Minor_Version__c.field-meta.xml
<CustomField>
    <fullName>Minor_Version__c</fullName>
    <label>Minor Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>