force-app/main/default/objects/QuickBooks_Config__mdt/fields/QuickBooks_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuickBooks Is Active</label>
    <type>Checkbox</type>
</CustomField>