force-app/main/default/objects/QuickBooks_Config__mdt/fields/Realm_ID__c.field-meta.xml
<CustomField>
    <fullName>Realm_ID__c</fullName>
    <label>Realm ID</label>
    <length>222</length>
    <type>Text</type>
</CustomField>